# ChangeYourVoice

./: README.md
app/: build.gradle
app/src/androidTest/java/aitor/font/puig/changeyourvoice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  changeyourvoice-jni.c
app/src/main/java/aitor/font/puig/changeyourvoice/: AudioAdapter.java  AudioFileClass.java  AudioModifierActivity.java  ChangeYourVoiceJNI.java  FileManager.java  MainActivity.java  RecordAudioActivity.java  RequestPermission.java
app/src/main/res/layout/: activity_audio_modifier.xml  activity_main.xml  activity_record_audio.xml  audio_list_item.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/test/java/aitor/font/puig/changeyourvoice/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
